setup: typeorm migrations and database schema

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-NODE_ENV=development
+# Example environment variables
+JWT_SECRET=change_this_in_production
+JWT_EXPIRY=7d
+FRONTEND_URL=http://localhost:3000
+PAYMENT_GATEWAY_URL=
+PAYMENT_GATEWAY_SECRET=NODE_ENV=development
 PORT=5000
 
 # Database
-DATABASE_URL="postgresql://wilfred:williy8615.@localhost:5432/pension"
+DATABASE_URL=postgresql://wilfred:williy8615.@localhost:5432/pension
 
 # JWT
 JWT_SECRET=your_super_secret_key_here
