--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "1.0.0",
   "description": "Backend API for pension management system",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "dev": "ts-node --esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "migration:generate": "npm run build && npx typeorm migration:generate -d ./dist/lib/data-source.js ./src/migrations/Init",
+    "migration:run": "npm run build && npx typeorm migration:run -d ./dist/lib/data-source.js",
+    "migration:revert": "npm run build && npx typeorm migration:revert -d ./dist/lib/data-source.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.8.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.28",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -33,8 +34,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.10.6",
     "@types/swagger-ui-express": "^4.1.6",
-    "prisma": "^5.8.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
