--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ PAYMENT_GATEWAY_SECRET=your_gateway_secret
 
 # CORS
 FRONTEND_URL=http://localhost:3000
+BACKEND_URL=https://pension-backend-rs4h.onrender.com/api-docs/#/
