feat: Update login to accept phone as identifier and make phone unique in database

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,13 @@ JWT_SECRET=change_this_in_production
 JWT_EXPIRY=7d
 FRONTEND_URL=http://localhost:3000
 PAYMENT_GATEWAY_URL=
-PAYMENT_GATEWAY_SECRET=NODE_ENV=development
+PAYMENT_GATEWAY_SECRET=
+NODE_ENV=development
 PORT=5000
 
 # Database
-DATABASE_URL=postgresql://wilfred:williy8615.@localhost:5432/pension
+DATABASE_URL=postgresql://pensions_user:6pUnBMZIP286i8pY53fdV657o7ust0Nw@dpg-d51gcu63jp1c73a0tac0-a.virginia-postgres.render.com/pensions
+
 
 # JWT
 JWT_SECRET=your_super_secret_key_here
