docs(swagger): add pin field to register endpoint

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,15 @@ SMS_API_KEY=your-sms-api-key
 
 # Optional: Logging
 LOG_LEVEL=info
+
+# Kafka configuration for notifications
+KAFKA_CLIENT_ID=notification-service
+# Single broker or comma-separated list
+KAFKA_BROKER=kafka-broker:9092
+# KAFKA_TOPIC is the topic where notifications are produced
+KAFKA_TOPIC=notifications
+# If using SASL/SSL set these
+KAFKA_SASL_MECHANISM=SCRAM-SHA-256
+KAFKA_SASL_USERNAME=your-kafka-username
+KAFKA_SASL_PASSWORD=your-kafka-password
+KAFKA_SSL_CA_LOCATION=ca.pem
