--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
     "zod": "^3.22.4"
+    ,"node-rdkafka": "^2.12.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
