--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
@@ -28,7 +29,6 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
     "zod": "^3.22.4"
-    ,"node-rdkafka": "^2.12.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
