--- a/.env.example
+++ b/.env.example
@@ -40,11 +40,11 @@ LOG_LEVEL=info
 # Kafka configuration for notifications
 KAFKA_CLIENT_ID=notification-service
 # Single broker or comma-separated list
-KAFKA_BROKER=kafka-broker:9092
+KAFKA_BROKER=pensions-kimaniwilfred95-d2b4.c.aivencloud.com:23362
 # KAFKA_TOPIC is the topic where notifications are produced
 KAFKA_TOPIC=notifications
 # If using SASL/SSL set these
 KAFKA_SASL_MECHANISM=SCRAM-SHA-256
-KAFKA_SASL_USERNAME=your-kafka-username
-KAFKA_SASL_PASSWORD=your-kafka-password
+KAFKA_SASL_USERNAME=avnadmin
+KAFKA_SASL_PASSWORD=AVNS_c0IOWKfVDMnMkP3F6Bj
 KAFKA_SSL_CA_LOCATION=ca.pem
