--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
     "zod": "^3.22.4",
+    "pdfkit": "^0.13.0",
+    "get-stream": "^8.0.0",
     "node-rdkafka": "^2.12.1"
   },
   "devDependencies": {
