--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
         condition: service_healthy
     environment:
       NODE_ENV: ${NODE_ENV:-production}
-      PORT: ${PORT:-5000}
+      PORT: ${DOCKER_PORT:-5173}
       DATABASE_URL: postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-pension_db}
       DB_HOST: db
       DB_PORT: 5432
@@ -51,13 +51,13 @@ services:
       SMS_API_URL: ${SMS_API_URL:-}
       SMS_API_KEY: ${SMS_API_KEY:-}
     ports:
-      - "${PORT:-5000}:5000"
+      - "${DOCKER_PORT:-5173}:${DOCKER_PORT:-5173}"
     volumes:
       - ./src:/app/src
     networks:
       - pension-network
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:${DOCKER_PORT:-5173}/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"]
       interval: 30s
       timeout: 10s
       retries: 3
